--- a/busy-bee-app/views/index.erb
+++ b/busy-bee-app/views/index.erb
@@ -1,1 +1,3 @@
-<h1>hello world</h1>
+<p><%= p "Welcome #{@user.first_name}"%></p>
+<a href="/jobs_list">Find a Project</a>
+<a href="/request">Request a Project</a>
