developer and requester features done

--- a/busy-bee-app/views/index.erb
+++ b/busy-bee-app/views/index.erb
@@ -1,3 +1,4 @@
 <p><%= p "Welcome #{@user.first_name}"%></p>
 <a href="/jobs_list">Find a Project</a>
 <a href="/request">Request a Project</a>
+<a href="/develop">Check Current Project</a>
