--- a/busy-bee-app/views/new_request.erb
+++ b/busy-bee-app/views/new_request.erb
@@ -1,4 +1,4 @@
-<form action="/request" method="post">
+<form action="/request/new" method="post">
   <label>Job Title</label>
   <input type="text" name="job_title">
 
@@ -6,13 +6,10 @@
   <input type="text" name="reward">
 
   <label>Description</label>
-  <input type="text" name="description">
+  <textarea name="description" rows="8" cols="20"></textarea>
 
   <label>Platform</label>
   <input type="text" name="platform">
-
-  <label>Post Date</label>
-  <input type="text" name="post_date">
 
   <label>Due Date</label>
   <input type="text" name="due_date">
