--- a/busy-bee-app/views/new_user.erb
+++ b/busy-bee-app/views/new_user.erb
@@ -36,5 +36,5 @@
   <input type="password" name="password">
 
   <button>Register</button>
-  <button action="/user/new" method="get">Cancel</button>
+  <button action="/" method="get">Cancel</button>
 </form>
