--- a/busy-bee-app/views/layout.erb
+++ b/busy-bee-app/views/layout.erb
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel='stylesheet' href='/stylesheets/main.css'>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 </head>
 <body>
     <% if logged_in? %>
