--- a/busy-bee-app/views/index.erb
+++ b/busy-bee-app/views/index.erb
@@ -1,4 +1,5 @@
 <p><%= p "Welcome #{@user.first_name}"%></p>
 <a href="/jobs_list">Find a Project</a>
-<a href="/request">Request a Project</a>
+<a href="/request/new">New Request</a>
+<a href="/request">Check Current Request</a>
 <a href="/develop">Check Current Project</a>
