--- a/busy-bee-app/views/jobs_list.erb
+++ b/busy-bee-app/views/jobs_list.erb
@@ -1,17 +1,19 @@
-<a href="/user">Back to Main Page</a>
+<a href="/user">Main Page</a>
 
 
 <% @jobs.each do |job| %>
-<div>
-  <span><%= p "Requester: #{job.requester.user.first_name} #{job.requester.user.last_name}" %></span>
-  <h2>
-    <%= job.job_title %>
-  </h2>
-  <span><%= p "AU$ #{job.reward}" %></span>
-  <p><%= job.description %></p>
-  <span><%= p "Platform: #{job.platform}" %></span>
-  <span><%= p "Post Date: #{job.post_date}" %></span>
-  <span><%= p "Due Date: #{job.due_date}" %></span>
-  <a href="/jobs_list/<%= job.job_id %>">Take Job</a>
-</div>
+  <div>
+    <% unless job.requester.requester_id == Requester.find_by(user_id: session[:user_id]).requester_id %>
+    <span><%= p "Requester: #{job.requester.user.first_name} #{job.requester.user.last_name}" %></span>
+    <h2>
+      <%= job.job_title %>
+    </h2>
+    <span><%= p "AU$ #{job.reward}" %></span>
+    <p><%= job.description %></p>
+    <span><%= p "Platform: #{job.platform}" %></span>
+    <span><%= p "Post Date: #{job.post_date}" %></span>
+    <span><%= p "Due Date: #{job.due_date}" %></span>
+    <a href="/jobs_list/<%= job.job_id %>">Take Job</a>
+  </div>
+  <% end %>
 <% end %>
