--- a/busy-bee-app/views/layout.erb
+++ b/busy-bee-app/views/layout.erb
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <title>Busy Bee</title>
   <meta charset="UTF-8">
   <link rel='stylesheet' href='/stylesheets/main.css'>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
@@ -13,7 +14,6 @@
         <button>logout</button>
       </form>
     <% end %>
-    session: <%= session[:user_id] %>
 
   <%= yield %>
 
