--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <p><%= p "Welcome #{@user.first_name}"%></p>
-<a href="/jobs_list">Find a Project</a>
-<a href="/request/new">New Request</a>
-<a href="/request">Check Current Request</a>
-<a href="/develop">Check Current Project</a>
+<a class='menu' href="/jobs_list">Find a Project</a>
+<a class='menu' href="/request/new">New Request</a>
+<a class='menu' href="/request">Check Current Request</a>
+<a class='menu' href="/develop">Check Current Project</a>
