--- a/views/new_feedback.erb
+++ b/views/new_feedback.erb
@@ -11,4 +11,4 @@
 
   <button>Post</button>
 </form>
-<a href="/<%= @job.job_id %>/feedback/new">Cancel</a>
+<a class ='menu' href="/<%= @job.job_id %>/feedback/new">Cancel</a>
