--- a/views/requester_details.erb
+++ b/views/requester_details.erb
@@ -1,4 +1,4 @@
-<a href="/develop">Return to Projects List</a>
+<a class ='menu' href="/develop">Return to Projects List</a>
 
   <h2><%= p "Name: #{@user_requester.first_name} #{@user_requester.last_name}"%></h2>
   <h2><%= p "Contact Name: #{@user_requester.contact_person}"%></h2>
