--- a/views/submit_project.erb
+++ b/views/submit_project.erb
@@ -4,5 +4,5 @@
   <label>Message</label>
   <textarea name="message" rows="8" cols="80"></textarea>
   <button>Submit</button>
-  <a href="/develop">Cancel</a>
+  <a class ='menu' href="/develop">Cancel</a>
 </form>
