--- a/views/jobs_list.erb
+++ b/views/jobs_list.erb
@@ -1,8 +1,8 @@
-<a href="/user">Main Page</a>
+<a class ='menu' href="/user">Main Page</a>
 
 
 <% @jobs.each do |job| %>
-  <div>
+  <div class='list'>
     <% unless job.requester.requester_id == Requester.find_by(user_id: session[:user_id]).requester_id %>
     <span><%= p "Requester: #{job.requester.user.first_name} #{job.requester.user.last_name}" %></span>
     <h2>
@@ -13,7 +13,7 @@
     <span><%= p "Platform: #{job.platform}" %></span>
     <span><%= p "Post Date: #{job.post_date}" %></span>
     <span><%= p "Due Date: #{job.due_date}" %></span>
-    <a href="/jobs_list/<%= job.job_id %>">Take Job</a>
+    <a class ='menu' href="/jobs_list/<%= job.job_id %>">Take Job</a>
   </div>
   <% end %>
 <% end %>
