--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,9 +4,12 @@
   <title>Busy Bee</title>
   <meta charset="UTF-8">
   <link rel='stylesheet' href='/stylesheets/main.css'>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 </head>
 <body>
+    <div class="header">
+        <h1>BUSY BEE</h1>
+    </div>
     <% if logged_in? %>
       logged in as <%= current_user.email %>
       <form action="/session" method="post">
