Fix requester and developer bugs

--- a/views/developer.erb
+++ b/views/developer.erb
@@ -20,7 +20,7 @@
           <button>Cancel Project</button>
         </form>
       <% else %>
-        <a class ='menu' href="/<%= project.job_id %>/feedback/new"></a>
+        <a class ='menu' href="/<%= project.job_id %>/feedback/new">Give Feedback</a>
       <% end %>
     </div>
   <% end %>
