--- a/views/new_request.erb
+++ b/views/new_request.erb
@@ -15,5 +15,5 @@
   <input type="text" name="due_date">
 
   <button>Post</button>
-  <button action="/request" method="get">Cancel</button>
 </form>
+<a class="menu" href="/request">Cancel</a>
