--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -18,13 +18,17 @@ button {
   display: block;
   margin: 10px auto;
   font-size: 1em;
-  width: 5em;
-  border-radius: 1em;
-  background-color: azure;
+  max-width: 200px;
+  width: 200px;
+  border-radius: 2em;
+  background-color: white;
+  border: 2px solid black;
+  padding: 10px;
 }
 
 a {
   text-decoration: none;
+  display: block;
 }
 
 span {
@@ -50,7 +54,7 @@ textarea {
 .login{
   border: 5px solid white;
   background-color: cornflowerblue;
-  width: 25%;
+  width: 40%;
   margin: 20px auto;
   color: white;
   padding: 10px;
@@ -62,7 +66,8 @@ textarea {
   border-radius: 2em;
   padding: 10px;
   display: block;
-  max-width: 40%;
+  width: 180px;
+  max-width: 180px;
   margin: 10px auto;
   color: black;
 }
@@ -70,5 +75,5 @@ textarea {
 .list {
   border: 1px solid black;
   border-radius: 1em;
-  width: 30%;
+  width: 250px;
 }
