--- a/views/login.erb
+++ b/views/login.erb
@@ -5,7 +5,7 @@
 
       <label>Password</label>
       <input type="password" name="password">
-      <a href="#">Forgot Password</a>
+      <!-- <a href="#">Forgot Password</a> -->
       <button>Sign In</button>
     </form>
 
