--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
-<p><%= p "Welcome #{@user.first_name}"%></p>
-<a class='menu' href="/jobs_list">Find a Project</a>
-<a class='menu' href="/request/new">New Request</a>
-<a class='menu' href="/request">Check Current Request</a>
-<a class='menu' href="/develop">Check Current Project</a>
+<div class="menu-group">
+  <a class='main' href="/jobs_list">Find a Project</a>
+  <a class='main' href="/request/new">New Request</a>
+  <a class='main' href="/request">Check Current Request</a>
+  <a class='main' href="/develop">Check Current Project</a>
+</div>
