--- a/views/login.erb
+++ b/views/login.erb
@@ -1,13 +1,12 @@
 <div class="login">
+    <h1>BUSY BEE</h1>
     <form action="/" method="post">
       <label>E-mail Address</label>
       <input type="text" name="email">
 
       <label>Password</label>
       <input type="password" name="password">
-      <!-- <a href="#">Forgot Password</a> -->
       <button>Sign In</button>
     </form>
-
-    <a href="/user/new">Sign Up</a>
+    <a class="menu" href="/user/new">Sign Up</a>
 </div>
