--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -1,40 +1,42 @@
-<form action="/user/new" method="post">
-  <label>first_name</label>
-  <input type="text" name="first_name">
+<div class="menu-group">
+  <form action="/user/new" method="post">
+    <label>First Name</label>
+    <input type="text" name="first_name">
 
-  <label>last_name</label>
-  <input type="text" name="last_name">
+    <label>Last Name</label>
+    <input type="text" name="last_name">
 
-  <label>Address</label>
-  <input type="text" name="address">
+    <label>Address</label>
+    <input type="text" name="address">
 
-  <label>Suburb</label>
-  <input type="text" name="suburb">
+    <label>Suburb</label>
+    <input type="text" name="suburb">
 
-  <label>Postcode</label>
-  <input type="text" name="postcode">
+    <label>Postcode</label>
+    <input type="text" name="postcode">
 
-  <label>Country</label>
-  <input type="text" name="country">
+    <label>Country</label>
+    <input type="text" name="country">
 
-  <label>E-mail Address</label>
-  <input type="text" name="email">
+    <label>E-mail Address</label>
+    <input type="text" name="email">
 
-  <label>Contact Person</label>
-  <input type="text" name="contact_person">
+    <label>Contact Person</label>
+    <input type="text" name="contact_person">
 
-  <label>Paypal Account</label>
-  <input type="text" name="paypal_account">
+    <label>Paypal Account</label>
+    <input type="text" name="paypal_account">
 
-  <label>ABN</label>
-  <input type="text" name="abn">
+    <label>ABN</label>
+    <input type="text" name="abn">
 
-  <label>TFN</label>
-  <input type="text" name="tfn">
+    <label>TFN</label>
+    <input type="text" name="tfn">
 
-  <label>Password</label>
-  <input type="password" name="password">
+    <label>Password</label>
+    <input type="password" name="password">
 
-  <button>Register</button>
-  <button action="/" method="get">Cancel</button>
-</form>
+    <button>Register</button>
+  </form>
+  <a class="menu" href="/">Cancel</a>
+</div>
